fix: fixed form data for texture
